Modifica estilos dos produtos e menu do site ACME

--- a/exercicios/exercicio03/acme/produtos.html
+++ b/exercicios/exercicio03/acme/produtos.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <h1>Produtos</h1>
-        <section>
+        <section class="produtos">
             <article>
                 <h3>Bomba</h3>
                 <img src="assets/imagem/bomb.png" alt="Bomba">
